@@ -1,5 +1,5 @@
 /*******************************************************************************
-* Copyright (c) 2023, 2025 Obeo.
+* Copyright (c) 2023, 2026 Obeo.
 * This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v2.0
 * which accompanies this distribution, and is available at
@@ -349,4 +349,23 @@ public class RequirementDefinitionImpl extends ConstraintDefinitionImpl implemen
         return result.toString();
     }
 
+    /**
+     * <!-- begin-user-doc --> Redefines getter <!-- end-user-doc -->
+     *
+     * @generated NOT
+     */
+    @Override
+    public String getDeclaredShortName() {
+        return this.getReqId();
+    }
+
+    /**
+     * <!-- begin-user-doc --> Redefines setter <!-- end-user-doc -->
+     *
+     * @generated NOT
+     */
+    @Override
+    public void setDeclaredShortName(String newDeclaredShortName) {
+        this.setReqId(newDeclaredShortName);
+    }
 } // RequirementDefinitionImpl
